# mobua-obsidian-manager

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  vaults.json
.claude/: interaction_log.txt
.claude/hooks/: utils.js
.claude/hooks/PostToolUse/: skip_summary_after_commit.js
.claude/hooks/Stop/: summarize_turn.js
.scripts/: headroom_proxy_runner.sh
backend/: config.py  main.py  pyproject.toml  vault.py
backend/api/: _helpers.py  config.py  folders.py  records.py  sync.py
backend/db/: connection.py
backend/obsidian_manager/: __main__.py  _buildinfo.py  config.py  main.py  schema_config.py  vault.py
backend/obsidian_manager/api/: _helpers.py  config.py  events.py  folders.py  meta.py  records.py  sync.py
backend/obsidian_manager/db/: connection.py  queries.py  schema.sql
backend/obsidian_manager/sync/: indexer.py  parser.py  watcher.py  writer.py
backend/sync/: indexer.py  parser.py  watcher.py  writer.py
backend/tests/: test_indexer.py  test_parser.py  test_schema_config.py  test_watcher.py  test_writer.py
docs/: implementation-plan-v1.1.md  implementation-plan.md
docs/llm-wiki/: INDEX.md
docs/llm-wiki/components/: build-info-endpoint.md  drawer.md  indexer.md  parser.md  sse-event-flow.md  vault-registry.md  watcher.md  writer.md
docs/llm-wiki/concepts/: atomic-write-delete-debounce.md  backend-package-layout.md  emergent-schema.md  relation-field-resolution.md  sync-badge-states.md  wikilink-navigation.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts  vitest.config.ts
(+67 files in other folders)
